syntax = "proto3";

package obd.v1;
import "obd/v1/session/entity.proto";



message SessionsListRequest {}
    
message SessionsListResponse {
    repeated Session sessions = 1;
}